src/test/deca/etape_A/valid/list_expr_logiques.deca
// Description :
//   test de liste d'expressions ( utilisation de ||, && et ! )

// Résultats :
//   Ok

{
 (( 2 || 3 ) && ( !4)) != true ;
} 