src/test/deca/etape_A/invalid/inst4.deca
// Description :
//   test pour instructions 

// Résultats :
//   Erreur syntaxique
//   Ligne 9 : extraneous input 'y' expecting {',', ';'}

{
int x = 2, int y = 3, int z = 4;
}